Fix soundtrack volume alignment.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -36376,6 +36376,7 @@ img._3XZsWYaYpPd4DZvwdZqRLw {
   height: fit-content !important;
   align-self: unset !important;
   gap: var(--zehn-size-spacing-md) !important;
+  align-items: center !important;
 }
 ._3DLyrg7YP5cNP9HKda62qd .gjP9WbEr6MS7VnS1zdyvb.HqwlEGHhcQCe1_0utna2Z {
   flex-direction: row !important;
